@@ -1,18 +1,4 @@
-/*
- * Copyright 2000-2017 JetBrains s.r.o.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+// Copyright 2000-2017 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package org.jetbrains.java.decompiler.modules.decompiler;
 
 import org.jetbrains.java.decompiler.code.CodeConstants;
@@ -288,7 +274,7 @@ public class ExprProcessor implements CodeConstants {
 
     ConstantPool pool = cl.getPool();
     StructBootstrapMethodsAttribute bootstrap =
-      (StructBootstrapMethodsAttribute)cl.getAttributes().getWithKey(StructGeneralAttribute.ATTRIBUTE_BOOTSTRAP_METHODS);
+      (StructBootstrapMethodsAttribute)cl.getAttribute(StructGeneralAttribute.ATTRIBUTE_BOOTSTRAP_METHODS);
 
     BasicBlock block = stat.getBlock();
 
@@ -313,16 +299,16 @@ public class ExprProcessor implements CodeConstants {
           break;
         case opc_lconst_0:
         case opc_lconst_1:
-          pushEx(stack, exprlist, new ConstExprent(VarType.VARTYPE_LONG, new Long(instr.opcode - opc_lconst_0), bytecode_offsets));
+          pushEx(stack, exprlist, new ConstExprent(VarType.VARTYPE_LONG, Long.valueOf(instr.opcode - opc_lconst_0), bytecode_offsets));
           break;
         case opc_fconst_0:
         case opc_fconst_1:
         case opc_fconst_2:
-          pushEx(stack, exprlist, new ConstExprent(VarType.VARTYPE_FLOAT, new Float(instr.opcode - opc_fconst_0), bytecode_offsets));
+          pushEx(stack, exprlist, new ConstExprent(VarType.VARTYPE_FLOAT, Float.valueOf(instr.opcode - opc_fconst_0), bytecode_offsets));
           break;
         case opc_dconst_0:
         case opc_dconst_1:
-          pushEx(stack, exprlist, new ConstExprent(VarType.VARTYPE_DOUBLE, new Double(instr.opcode - opc_dconst_0), bytecode_offsets));
+          pushEx(stack, exprlist, new ConstExprent(VarType.VARTYPE_DOUBLE, Double.valueOf(instr.opcode - opc_dconst_0), bytecode_offsets));
           break;
         case opc_ldc:
         case opc_ldc_w:
@@ -618,8 +604,17 @@ public class ExprProcessor implements CodeConstants {
           stack.pop();
           break;
         case opc_pop:
-        case opc_pop2:
           stack.pop();
+          break;
+        case opc_pop2:
+          if (stack.getByOffset(-1).getExprType().stackSize == 1) {
+            // Since value at the top of the stack is a value of category 1 (JVMS9 2.11.1)
+            // we should remove one more item from the stack.
+            // See JVMS9 pop2 chapter.
+            stack.pop();
+          }
+          stack.pop();
+          break;
       }
     }
   }
@@ -840,13 +835,13 @@ public class ExprProcessor implements CodeConstants {
       defaultVal = new ConstExprent(VarType.VARTYPE_NULL, null, null);
     }
     else if (arrType.type == CodeConstants.TYPE_FLOAT) {
-      defaultVal = new ConstExprent(VarType.VARTYPE_FLOAT, new Float(0), null);
+      defaultVal = new ConstExprent(VarType.VARTYPE_FLOAT, Float.valueOf(0), null);
     }
     else if (arrType.type == CodeConstants.TYPE_LONG) {
-      defaultVal = new ConstExprent(VarType.VARTYPE_LONG, new Long(0), null);
+      defaultVal = new ConstExprent(VarType.VARTYPE_LONG, Long.valueOf(0), null);
     }
     else if (arrType.type == CodeConstants.TYPE_DOUBLE) {
-      defaultVal = new ConstExprent(VarType.VARTYPE_DOUBLE, new Double(0), null);
+      defaultVal = new ConstExprent(VarType.VARTYPE_DOUBLE, Double.valueOf(0), null);
     }
     else { // integer types
       defaultVal = new ConstExprent(0, true, null);
@@ -860,7 +855,7 @@ public class ExprProcessor implements CodeConstants {
                                          int indent,
                                          boolean castNull,
                                          BytecodeMappingTracer tracer) {
-    return getCastedExprent(exprent, leftType, buffer, indent, castNull, false, tracer);
+    return getCastedExprent(exprent, leftType, buffer, indent, castNull, false, false, tracer);
   }
 
   public static boolean getCastedExprent(Exprent exprent,
@@ -869,6 +864,7 @@ public class ExprProcessor implements CodeConstants {
                                          int indent,
                                          boolean castNull,
                                          boolean castAlways,
+                                         boolean castNarrowing,
                                          BytecodeMappingTracer tracer) {
     VarType rightType = exprent.getExprType();
 
@@ -876,13 +872,27 @@ public class ExprProcessor implements CodeConstants {
       castAlways ||
       (!leftType.isSuperset(rightType) && (rightType.equals(VarType.VARTYPE_OBJECT) || leftType.type != CodeConstants.TYPE_OBJECT)) ||
       (castNull && rightType.type == CodeConstants.TYPE_NULL && !UNDEFINED_TYPE_STRING.equals(getTypeName(leftType))) ||
-      (isIntConstant(exprent) && rightType.isStrictSuperset(leftType));
+      (castNarrowing && isIntConstant(exprent) && isNarrowedIntType(leftType));
 
     boolean quote = cast && exprent.getPrecedence() >= FunctionExprent.getPrecedence(FunctionExprent.FUNCTION_CAST);
+
+    // cast instead to 'byte' / 'short' when int constant is used as a value for 'Byte' / 'Short'
+    if (castNarrowing && exprent.type == Exprent.EXPRENT_CONST) {
+      if (leftType.equals(VarType.VARTYPE_BYTE_OBJ)) {
+        leftType = VarType.VARTYPE_BYTE;
+      }
+      else if (leftType.equals(VarType.VARTYPE_SHORT_OBJ)) {
+        leftType = VarType.VARTYPE_SHORT;
+      }
+    }
 
     if (cast) buffer.append('(').append(getCastTypeName(leftType)).append(')');
 
     if (quote) buffer.append('(');
+
+    if (exprent.type == Exprent.EXPRENT_CONST) {
+      ((ConstExprent) exprent).adjustConstType(leftType);
+    }
 
     buffer.append(exprent.toJava(indent, tracer));
 
@@ -904,5 +914,10 @@ public class ExprProcessor implements CodeConstants {
     }
 
     return false;
+  }
+
+  private static boolean isNarrowedIntType(VarType type) {
+    return VarType.VARTYPE_INT.isStrictSuperset(type) ||
+           type.equals(VarType.VARTYPE_BYTE_OBJ) || type.equals(VarType.VARTYPE_SHORT_OBJ);
   }
 }
